<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation" tools:locale="zh">

    <string name="app_name">GO课堂</string>

    <!-- 白板 -->
    <string name="wb_tool_erase">橡皮擦</string>
    <string name="wb_tool_revoke">撤销</string>
    <string name="wb_tool_redo">重做</string>
    <string name="wb_tool_save">保存</string>
    <string name="wb_tool_brush">画笔</string>
    <string name="wb_tool_laser">激光笔</string>
    <string name="wb_tool_choice">选择</string>
    <string name="wb_tool_graphical">图形</string>
    <string name="wb_tool_text">文本</string>
    <string name="wb_tip_save_success">保存成功，可在系统相册中查看</string>
    <string name="wb_tool_drag">拖拽</string>
    <string name="wb_tool_format">格式</string>
    <string name="wb_tool_upload_files">上传</string>
    <string name="wb_tool_clear">清空</string>
    <string name="wb_tool_pen_border_thickness">笔触&amp;边框粗细</string>
    <string name="wb_tool_font">字体</string>
    <string name="wb_tool_font_size">字号大小</string>
    <string name="wb_tool_text_color">颜色</string>
    <string name="wb_tool_click">点击</string>
    <string name="wb_tool_shape_selection">形状选择</string>
    <string name="wb_tool_upload_static_content">支持 PPT(X)、DOC(X)、XLS(X)、PDF、TXT、JPG、JPEG、PNG、BMP、HEIC 格式</string>
    <string name="wb_tool_upload_static">上传静态文件</string>
    <string name="wb_tool_upload_dynamic">上传动态文件</string>
    <string name="wb_tool_upload_dynamic_content">支持 PPTX、PPT 格式</string>
    <string name="wb_cancel">取消</string>
    <string name="wb_determine">确定</string>
    <string name="wb_tip_are_u_sure_close">确定关闭【%s】吗?</string>
    <string name="wb_tip_exceed_max_number_wb">已超过最大数量，请关闭部分白板</string>
    <string name="wb_tip_exceed_max_number_file">已超过最大数量，请先关闭部分文件</string>
    <string name="wb_select_share">请选择需要共享的内容</string>
    <string name="wb_shared_wb">互动白板</string>
    <string name="wb_shared_file">共享文件</string>
    <string name="wb_tip_not_allowed_share">老师还未允许你使用共享功能</string>
    <string name="wb_preview">预览</string>
    <string name="wb_tip_wait_teacher_share">等待老师共享</string>

    <!-- 登陆 -->
    <string name="login_setting">设置</string>
    <string name="login_clear_cache">清除缓存</string>
    <string name="login_feedback">意见反馈</string>
    <string name="login_other_teacher_in_the_class">课堂已有其他老师，不能加入</string>
    <string name="login_class_is_full">课堂人数已满，不能加入</string>
    <string name="login_interconnected">国内和海外不互通，请确保体验者均连接相同环境</string>
    <string name="login_welcome_join_goclass">欢迎加入到GO课堂</string>
    <string name="login_input_classid">请输入课堂ID</string>
    <string name="login_enter_name">请输入姓名</string>
    <string name="login_small_class">小班课</string>
    <string name="login_large_class">大班课</string>
    <string name="login_teacher">老师</string>
    <string name="login_student">学生</string>
    <string name="login_join_class">加入课堂</string>
    <string name="login_button_cancel">取消</string>
    <string name="login_button_confirm">确定</string>
    <string name="login_retry">重试</string>
    <string name="login_access_env">接入环境</string>
    <string name="login_mainland_china">中国内地</string>
    <string name="login_overseas">海外</string>
    <string name="login_rejoining">正在重新加入…</string>

    <!-- 房间-底部栏 -->
    <string name="room_controller_mic">麦克风</string>
    <string name="room_controller_camera">摄像头</string>
    <string name="room_controller_share">共享</string>
    <string name="room_controller_invitation">邀请</string>
    <string name="room_controller_member">成员</string>
    <string name="room_controller_switch_camera">切换摄像头</string>
    <string name="room_turn_off_camera">关闭摄像头</string>
    <string name="room_controller_whiteboard">白板</string>
    <string name="room_controller_docs">文件</string>
    <string name="room_class_id">课堂ID:%s</string>
    <string name="room_end_sign_out">退出</string>
    <string name="room_tip_are_u_sure_exit">确定要退出当前课堂？</string>
    <string name="room_exit_class">退出课堂</string>
    <string name="room_tip_exit_class">你可以暂时离开课堂，课堂不会立即结束。结束教学后，学生将被移出课堂。</string>
    <string name="room_end_teaching">结束教学</string>
    <string name="room_leave_class">离开课堂</string>
    <string name="room_file_animation_displayed">静态：无法展示ppt动画；动态：可展示ppt动画 H5:展示H5文件</string>
    <string name="room_file_dynamic">动态</string>
    <string name="room_file_static_file">静态</string>
    <string name="room_file_h5_file">H5</string>
    <string name="room_im_discuss">讨论</string>
    <string name="room_im_say_something">说点什么吧~</string>
    <string name="room_im_send">发送</string>
    <string name="room_im_join_class">加入</string>
    <string name="room_im_exit_class">退出</string>
    <string name="room_im_go_class">课堂</string>
    <string name="room_file_list">白板和文件列表</string>
    <string name="room_file_select_file">选择文件</string>
    <string name="room_member_joined">已加入的成员(%d)</string>
    <string name="room_dialog_classroom_link">课堂链接：%s,\n课堂ID：%s,\n接入环境：%s</string>
    <string name="room_dialog_invitation_successfully">邀请信息复制成功</string>
    <string name="room_network_exception">网络异常，正在重新加入…</string>
    <string name="room_rejoin_fail">重新加入失败，请检查网络设置</string>
    <string name="room_teacher">老师</string>
    <string name="room_tip_teacher_finished_teaching">老师已结束教学</string>
    <string name="room_tip_wait_for_teacher">等待老师加入</string>
    <string name="room_student_tip_turned_on_camera">老师已开启你的摄像头</string>
    <string name="room_student_tip_turned_off_camera">老师已关闭你的摄像头</string>
    <string name="room_student_tip_turned_on_mic">老师已开启你的麦克风</string>
    <string name="room_student_tip_turned_off_mic">老师已关闭你的麦克风</string>
    <string name="room_student_tip_revoke_share">老师已收回你的共享权限</string>
    <string name="room_student_tip_permission">老师已允许你使用共享功能</string>
    <string name="room_tip_channels">演示课堂最多开启3路学生音视频</string>
    <string name="room_member_me">(我)</string>
    <string name="room_im_me">我</string>

    <!-- 设置 -->
    <string name="setting_language">语言</string>
    <string name="setting_chinese">简体中文</string>
    <string name="setting_english">English</string>



    <string name="official_env">正式环境</string>
    <string name="test_env">测试环境</string>
    <string name="select_env">选择环境</string>
    <string name="app_id_hint">请输入App ID</string>
    <string name="app_sign_hint">请输入App Sign</string>
    <string name="font_sc">思源黑体</string>
    <string name="font_system">系统字体</string>
    <string name="upload_log">上传日志</string>
    <string name="wb_file_sheet_list">sheet列表</string>
    <string name="teacher_suffix">(老师)</string>
    <string name="wb_file_ppt_not_support">ppt暂不支持拖拽，请点击顶部翻页按钮</string>
    <string name="wb_file_board_not_support">白板暂不支持拖拽，请点击顶部翻页按钮</string>
    <string name="join_max_user_limit">加入课堂失败，当前已达到%d人的最大人数限制</string>
    <string name="join_init_video_failed">音视频引擎还未初始化成功，请检查appID和appSign是否正确</string>
    <string name="join_init_docs_failed">文件转码服务还未初始化成功，请检查appID和appSign是否正确</string>
    <string name="join_init_wb_failed">白板服务还未初始化成功，请检查appID和appSign是否正确</string>
    <string name="join_other">登陆房间失败，错误码:%d</string>
    <string name="mainland_value">home</string>
    <string name="other_value">overseas</string>
    <string name="login_choose_roles">选择角色</string>
    <string name="login_choose_language">选择语言</string>
    <string name="login_class_type">课堂类型</string>
    <string name="title_activity_debug">DebugActivity</string>
    <string name="go_class_title">开启业务后台测试环境</string>
    <string name="live_room_title">开启房间服务测试环境</string>
    <string name="docs_view_title">开启文件服务测试环境</string>
    <string name="wb_tip_fail_save">保存失败，请重试</string>
    <string name="clear_cur_page">清空页</string>
    <string name="wb_tip_unable_save">无法保存白板图片</string>
    <string name="wb_tip_unable_upload_file">无法上传文件</string>
    <string name="wb_tip_open_permission">请在系统的设置中开启存储权限</string>
    <string name="jump_to_settings">前往设置</string>
    <string name="upload_file_request_access">上传文件需要您允许访问存储权限</string>
    <string name="upload_file">上传文件</string>
    <string name="upload_convert_fail">格式转换失败，请重新选择</string>
    <string name="doc_file_empty">文件内容为空，请重新选择</string>
    <string name="upload_file_failed_no_access">上传失败,请允许存储访问权限</string>
    <string name="cancel_upload_file">已经取消上传</string>
    <string name="cancel_upload">取消上传</string>
    <string name="upload_file_dir_error">该文件无法上传</string>
    <string name="doc_file_not_found">文件不存在</string>
    <string name="doc_file_not_supported">文件不符合规范，请重新选择</string>
    <string name="wb_tip_switch_failed">切换失败</string>
    <string name="wb_tip_failed_get_whiteboard">获取当前白板失败，errorCode = %d</string>
    <string name="room_end_teaching_fail">结束教学失败：%d</string>
    <string name="exception_restart_app">%d秒后重启应用</string>
    <string name="doc_uploading_failed">文件上传失败，请重试</string>
    <string name="doc_converting_failed">文件转码失败，请重试</string>
    <string name="doc_uploading">文件上传中 (%1$.2f%&#37;) </string>
    <string name="doc_converting">文件正在转码</string>
    <string name="doc_uploading_size_limit">文件大小超过限制，请重新选择</string>
    <string name="transcoding_complete">转码完成，fileID =</string>
    <string name="join_class_failed_try_again">加入课堂失败，请重试</string>
    <string name="exception_exit_app">很抱歉, 程序出现异常, 即将退出</string>
    <string name="failed_to_get_file_list">获取文件列表失败</string>
    <string name="wb_tip_failed_sync_whiteboard">同步当前白板失败，errorCode = %d</string>
    <string name="wb_tip_failed_load_file_whiteboard">加载文件白板失败，错误代码 %d</string>
    <string name="wb_tip_failed_create_file_whiteboard">创建文件白板失败，错误代码 %d</string>
    <string name="wb_tip_failed_create_whiteboard">创建白板失败，错误代码 %d</string>
    <string name="wb_tip_failed_delete_whiteboard">删除白板失败，错误代码 %d</string>
    <string name="wb_tip_failed_load_file">加载文件失败，错误代码 %d</string>
    <string name="create_board">【%s1创建的白板%s2】吗？</string>
    <string name="room_im_max_characters">最多支持输入%d个字符</string>
    <string name="network_request_error">网络请求错误</string>
    <string name="network_connection_timeout">网络连接超时</string>
    <string name="login_network_exception_try_again">网络异常，请检查网络后重试</string>
    <string name="abnormal">异常</string>
    <string name="repeated_requests">重复请求</string>
    <string name="system_error">系统错误</string>
    <string name="parameters_error">错误的参数</string>
    <string name="users_do_not_have_permission_to_modify">用户没有权限修改</string>
    <string name="target_not_in_the_classroom">目标用户不在教室</string>
    <string name="need_login_first">需要先登陆房间</string>
    <string name="login_room_not_exist">房间不存在</string>
    <string name="users_are_sharing">用户正在共享</string>
    <string name="users_do_not_have_to_share">用户没有共享</string>
    <string name="user_is_not_a_teacher">用户不是老师</string>
    <string name="sync_message_error">同步消息错误</string>
    <string name="room_login_time_limit_15">课堂体验时长为15分钟</string>
    <string name="room_login_time_out">课堂体验时长已到期</string>


</resources>
