<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f5f8"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_mini"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/room_center_bottom_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wb_select_share"
            android:textColor="@color/text_black2"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/center_bottom_whiteboard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/center_bottom_whiteboard"
            android:layout_width="120dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/wb_shared_wb"
            android:textColor="@color/text_blue"
            android:textSize="15sp"
            android:background="@drawable/drawable_center_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/center_bottom_file"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_center_bottom_tips" />

        <TextView
            android:id="@+id/center_bottom_file"
            android:layout_width="120dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/wb_shared_file"
            android:textColor="@color/text_blue"
            android:textSize="15sp"
            android:background="@drawable/drawable_center_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/center_bottom_whiteboard"
            app:layout_constraintTop_toBottomOf="@+id/room_center_bottom_tips" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cl_large"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/default_waiting_share"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wb_tip_wait_teacher_share"
            android:textColor="@color/text_black2"
            android:textSize="15sp"/>

    </LinearLayout>
</LinearLayout>