<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="227dp"
        android:layout_height="268dp"
        android:background="@drawable/style_popup"
        android:elevation="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/style_Font_style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wb_tool_font"
            android:textColor="@color/text_black"
            android:textSize="12sp"
            android:layout_marginTop="14dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/style_color_recyclerview" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/item_style_font_bold"
                android:layout_width="40dp"
                android:layout_height="24dp"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/color_font_text" />

            <ImageView
                android:id="@+id/item_style_font_italic"
                android:layout_width="40dp"
                android:layout_height="24dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/color_font_text" />

        </LinearLayout>

        <TextView
            android:id="@+id/style_Font_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:text="@string/wb_tool_font_size"
            android:textColor="@color/text_black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/style_color_recyclerview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/style_font_recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/style_Font_title"
            tools:listitem="@layout/item_style_font"
            tools:itemCount="1"/>

        <TextView
            android:id="@+id/style_size_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:text="@string/wb_tool_pen_border_thickness"
            android:textColor="@color/text_black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/style_lineWidth_recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/style_size_title"
            tools:listitem="@layout/item_style_linewidth"
            tools:itemCount="1" />

        <TextView
            android:id="@+id/style_color_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:text="@string/wb_tool_text_color"
            android:textColor="@color/text_black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/style_lineWidth_recyclerview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/style_color_recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/style_color_title"
            tools:listitem="@layout/item_style_color"
            tools:itemCount="2" />

    </LinearLayout>
</FrameLayout>